[tool.poetry]
name = "course-project-account-operations"
version = "0.1.0"
description = ""
authors = ["Dmitriy Chemakin <dchemakin93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
